reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__proposition.rs_line_289_col_9.log

*** crates/tracewake-core/src/epistemics/proposition.rs:289:9: replace <impl FromStr for Proposition>::from_str -> Result<Self, Self::Err> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/epistemics/proposition.rs
+++ replace <impl FromStr for Proposition>::from_str -> Result<Self, Self::Err> with Ok(Default::default())
@@ -281,57 +281,17 @@
         f.write_str(&self.render())
     }
 }
 
 impl FromStr for Proposition {
     type Err = PropositionParseError;
 
     fn from_str(value: &str) -> Result<Self, Self::Err> {
-        let parts: Vec<_> = value.split('|').collect();
-        let proposition = match parts.as_slice() {
-            ["item_located_in_container", item_id, container_id] => {
-                Proposition::ItemLocatedInContainer {
-                    item_id: ItemId::new(*item_id)?,
-                    container_id: ContainerId::new(*container_id)?,
-                }
-            }
-            ["item_located_at_place", item_id, place_id] => Proposition::ItemLocatedAtPlace {
-                item_id: ItemId::new(*item_id)?,
-                place_id: PlaceId::new(*place_id)?,
-            },
-            ["item_carried_by_actor", item_id, actor_id] => Proposition::ItemCarriedByActor {
-                item_id: ItemId::new(*item_id)?,
-                actor_id: ActorId::new(*actor_id)?,
-            },
-            ["container_contents_observed", container_id] => {
-                Proposition::ContainerContentsObserved {
-                    container_id: ContainerId::new(*container_id)?,
-                }
-            }
-            ["item_missing_from_expected_location", item_id, expected_location] => {
-                Proposition::ItemMissingFromExpectedLocation {
-                    item_id: ItemId::new(*item_id)?,
-                    expected_location: deserialize_location(expected_location)?,
-                }
-            }
-            ["sound_heard_near_place", place_id] => Proposition::SoundHeardNearPlace {
-                place_id: PlaceId::new(*place_id)?,
-            },
-            ["possible_movement_near_place", place_id] => Proposition::PossibleMovementNearPlace {
-                place_id: PlaceId::new(*place_id)?,
-            },
-            ["actor_was_near_place", actor_id, place_id] => Proposition::ActorWasNearPlace {
-                actor_id: ActorId::new(*actor_id)?,
-                place_id: PlaceId::new(*place_id)?,
-            },
-            _ => return Err(PropositionParseError::InvalidShape),
-        };
-
-        Ok(proposition)
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 fn serialize_location(location: &Location) -> String {
     match location {
         Location::AtPlace(place_id) => format!("at_place:{}", place_id.serialize_canonical()),
         Location::InContainer(container_id) => {
             format!("in_container:{}", container_id.serialize_canonical())


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/epistemics/proposition.rs` has changed (1781909865.083925941s, 5s after last build at 1781909860.975925872s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `Proposition: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/proposition.rs:289:12
    |
289 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `Proposition`
   --> crates/tracewake-core/src/epistemics/proposition.rs:9:1
    |
  9 | pub enum Proposition {
    | ^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `proposition::Proposition: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/proposition.rs:289:12
    |
289 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `proposition::Proposition`
   --> crates/tracewake-core/src/epistemics/proposition.rs:9:1
    |
  9 | pub enum Proposition {
    | ^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
